my_flask_app/networkplicies/db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-from-backend
  namespace: db
spec:
  podSelector:
    matchLabels:
      app: db
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          layer: backend
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 80
  policyTypes:
  - Ingress
