my_flask_app/networkplicies/frontend-all-deny-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-all-allow
  namespace: backend
spec:
  podSelector: {}
  ingress:
  egress:
  policyTypes:
  - Ingress
  - Egress
